Config fully(?) implemented, bug testing underway logging is now optional (config) Configuration now supplies more information to print statements

--- a/Files/config.ini
+++ b/Files/config.ini
@@ -2,8 +2,10 @@
 debuginfo = True
 extended_debug_info = True
 progresstype = Duration
-sleeptime = 0
+sleeptime = 1
 clipboard = False
 silenterrors = True
 version_no = 1.0.5
+access_token = BQDP6aNU-bSvzAF3SCEDPVQnnLHBRwj6bGlrnxDUBsAKz5tkMFdUCfPDDwPpybbjx6_czwHiJ4He0KeRAINKDirR5kmAoxKhT-SrzbPwmyBBG-Vt1czfpweQVsxvsCnbSKfJ-53cHnqU1gyXF3Cwdgv1YJj0mTcEnLK2wyuDhiZCMHYhMh-WZCKPnQn2QVpBLJn2vpKtNuB58A
+logging = False
 
