--- a/Files/config.ini
+++ b/Files/config.ini
@@ -3,14 +3,15 @@ debuginfo = True
 mode = default
 extended_debug_info = True
 progresstype = Remainder
-sleeptime = 0
+sleeptime = 5
 clipboard = False
 silenterrors = False
 version_no = 1.3.0
-access_token = BQBf4dJSArCdGd8_BqQep7gNh-J84RK0XVT0EoXcmyMLE8b_cK2Mz6oddxNnhn3148jmTfSBLnisv35ZfzlMe2-IpqKJQv8yZATY4TIIaksyPXd8yFD1X_wbt75rk9fQebNZmcPaPV6_wcMx1C8nvLddWqDi8oAHdKlD63yKfxGXlYBY7d_ztTW_VGp_aWupJOz8A3y5VWXzv-w
+access_token = BQA2Uh2g2sIHWFNBJeAZUI_LArdHND1FO0rH8bwzLJHs3oFexochX_90-C9Z65pnWNd4XWwoHUHnIvHAFiYJ4VgRmZ8HFL9sr1RGIynA-kmeHNgH_nBfsx4vomir6mV9VcuR4t3aT4d-9cxNmeAIGUzHk0Ecj9WtrnbWnzxo0Cl5E5LFj-45xSzFi2VOWONsmAZNy1tLB18MWec
 logging = True
 tracklink = False
+date_check = true
 eastereggs = true
 api_link = https://api.spotify.com/v1/me/player?market=ES
-refresh_token = AQDC8W_Cj1uTt6tam9BsFIPuTbnGJxsiq0f8e7RF0jswqavIkpe2TR-_c0IHP4pfv3YVPzZWATVfklCsaBuWk2sUdiAxYHm0Si_JrgpTLwdX_uhlBCszmtrqBd0d9g5_lxo
+refresh_token = AQC9J2XXam4QfNUisHop81DEB3X-i3W9VyfhYz3Sb44-YSe70SHQL0kksz8N0AofvsVB1Hu7vA_8PN-R8YJqOzXVQ63E6XpvjRZQXLCW1fDJcBc2daq9WqULh0k8FFn_ENE
 
